--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,97 @@
 /* Denna fil skall innehålla din CSS kod */
+
+
+
+*{
+    margin: 0px;
+}
+
+.Westernfoods {
+    display: grid;
+    width: 100vw;
+    height: 100vh;
+
+
+grid-template-areas: 
+
+"he he he"
+"ar ar as"
+"ar ar as"
+"ar ar as"
+"fo fo fo"
+
+;
+grid-template-columns: repeat(3, 1fr);
+grid-template-rows: repeat(5, 1fr);
+grid-gap: 2px;
+
+}
+
+
+.header {
+    grid-area: he;
+    background-color: antiquewhite;
+}
+
+.article {
+    grid-area: ar;
+    background-color: gray;
+}
+.aside {
+    grid-area: as;
+    background-color: red;
+}
+
+.footer{
+    grid-area: fo;
+    background-color: goldenrod;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
