--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,41 @@
 /* Denna fil skall innehålla din CSS kod */
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    line-height: 1.5;
-    padding:0;
-    margin:0;
-    background-color:lightgrey;
-
-}
-.container{
-    width:80%;
-    margin:auto;
-    overflow:hidden;
-}
-
-ul{
-    margin:0;
-    padding:0;
-}
-
-header{
-    background:darkolivegreen;
-    color: whitesmoke;
-    padding-top: 30px;
-    min-height: 70px;
-    border-bottom: lightcoral 3px solid;
-}
-
-header a{
-    color: lightskyblue;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-}
-
-
-header li{
-    float: left;
-    display: inline;
-    padding:0 20px 0 20px;
-}
-
-header #logga{
-    float: left;
-}
-
-header #logga h1{
+* {
     margin: 0;
-} 
+}
 
-header nav{
-    float: right;
+.gridWrapper {
+    display: grid;
+width: 100vw;
+height: 100vh;
+
+grid-template-areas: 
+"he he he he he"
+"al al al al al"
+"al al al al al"
+"al al al al al"
+"al al al al al"
+"al al al al al"
+"al al al al al"
+"fo fo fo fo fo"
+
+;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(8, 1fr);
+grid-gap: 2px;
 
 }
 
+.header {
+    grid-area: he;
+    background-color: brown;
+    
+}
 
-
-
+.article{
+    grid-area: al;
+    background-color: cornflowerblue;
+}
 
 
 
